--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -30,11 +30,11 @@
     <div class="contain-fluid">
         <h1 class="display-5 pt-4" style="color: #4E4E4E; text-align: center; font-size: 50px;">Animated Gifs Study
         </h1>
-        <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case 5
+        <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case {{case_count}}
         </h2>
         <div class="row">
             <div class="col-md-4" style="padding: 0% 0% 0% 14%;">
-                <h1 class = "pb-4">Conversation Sample 2</h1>
+                <h1 class = "pb-4"> Sample {{sample_id}}</h1>
                 <img src="{% static "img/screenshot.png"%} " alt="" class="img-fluid">
             </div>
             <div class="col-md-4" style="padding: 0% 7% 0% 7%;">
@@ -50,7 +50,6 @@
                     <input type="text" class="form-control" placeholder="happy, tired, stressed, etc" aria-label=""
                         aria-describedby="basic-addon1">
                 </div>
-                <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
 
             </div>
             <div class="col-md-4" style="padding: 0% 7% 0% 0%;">
