--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -30,7 +30,7 @@
     <div class="contain-fluid">
         <h1 class="display-5 pt-4" style="color: #4E4E4E; text-align: center; font-size: 50px;">Animated Gifs Study
         </h1>
-        <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case {{case_count}}
+        <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case {{request.session.step}}
         </h2>
         <div class="row">
             <div class="col-md-4" style="padding: 0% 0% 0% 14%;">
@@ -148,7 +148,7 @@
                     </select>
                 </div>
 
-                <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+                <input type="submit" class="btn btn-primary btn-lg btn-block"></button>
 
             </div>
         </div>
