--- a/gif/study/templates/start.html
+++ b/gif/study/templates/start.html
@@ -32,8 +32,26 @@
         </h1>
         <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Current Step: {{request.session.step}}
         </h2>
+        <div class="container pt-4 mt-4" style="color: #4E4E4E; text-align: center; font-size: 30px;">
+            <p>
+            </br></br> This is the end of the study. </br> Thanks for your time and participation!</br></br>
+            </p>
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <form method='post' action="" >
+                        {% csrf_token %}
+                        <input type="submit" class="btn btn-primary btn-lg btn-block"
+                            name="cmd" value="reset"></button>
+                    </form>
+                </div>
+                <div class="col-md-4"></div>
 
-        
+            </div>
+            
+
+        </div>
+
     </div>
 </div>
 
