--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -147,8 +147,11 @@
                         <option value="2">2 - No</option>
                     </select>
                 </div>
-
-                <input type="submit" class="btn btn-primary btn-lg btn-block"></button>
+                <form method='post' action="" >
+                    {% csrf_token %}
+                    <input type="submit" class="btn btn-primary btn-lg btn-block"
+                        name="cmd" value="submit"></button>
+                </form>
 
             </div>
         </div>
