--- a/gif/study/templates/start.html
+++ b/gif/study/templates/start.html
@@ -42,7 +42,7 @@
                     <form method='post' action="" >
                         {% csrf_token %}
                         <input type="submit" class="btn btn-primary btn-lg btn-block"
-                            name="cmd" value="reset"></button>
+                            name="cmd" value="start"></button>
                     </form>
                 </div>
                 <div class="col-md-4"></div>
