--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -38,7 +38,7 @@
                 <h1 class = "pb-4"> Sample {{sample_id}}</h1>
                 <img src="{% static "img/screenshot.png"%} " alt="" class="img-fluid">
             </div>
-            <div class="col-md-4" style="padding: 0% 7% 0% 7%;">
+            <div class="col-md-4" >
                 <h1 class = "pb-4">  Gif</h1>
                 <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid">
                 <p class="lead">
@@ -51,9 +51,27 @@
                     <input id = "searchq" type="text" class="form-control" placeholder="happy, tired, stressed, etc" aria-label=""
                         aria-describedby="basic-addon1">
                 </div>
+                <div id="gifresults">
 
+                
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
+
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+                    
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
+                </div>
             </div>
-            <div class="col-md-4" style="padding: 0% 7% 0% 0%;">
+            <div class="col-md-4" style="padding: 0% 7% 0% 7%;">
                 <h1 class = "pb-4"> Survey</h1>
                 <img src="sample.gif" alt="" class="img-fluid">
                
