--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-4" >
                 <h1 class = "pb-4">  Gif</h1>
-                <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid">
+                <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid" id = "main_img">
                 <p class="lead">
                     Search a Gif to replace the highlighted text
                 </p>
@@ -60,15 +60,6 @@
                     <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
                     <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
                     <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
-
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
-                    
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
-                    <img src="https://giphy.com/embed/65EwrCskVr0M40yKZu" alt="" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-4" style="padding: 0% 7% 0% 7%;">
