--- a/gif/study/templates/start.html
+++ b/gif/study/templates/start.html
@@ -34,7 +34,7 @@
         </h2>
         <div class="container pt-4 mt-4" style="color: #4E4E4E; text-align: center; font-size: 30px;">
             <p>
-            </br></br> This is the end of the study. </br> Thanks for your time and participation!</br></br>
+            </br></br> This is the beginning of the study. </br> Thanks for your time and participation!</br>Click Start when ready</br>
             </p>
             <div class="row">
                 <div class="col-md-4"></div>
