--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -33,9 +33,46 @@
         </h1>
         <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case {{request.session.step}}
         </h2>
+        <div class="row pb-4 mb-4">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="text-center">Instruction</div>
+                
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        Step 1. Read over the conversation example in the Sample section.
+                        You're tasked with selecting a gif to replace the highlighted message.
+                    </li>
+                    <li class="list-group-item">
+                        Step 2. Type in the keyword in the search bar to search a gif. 
+                        Click 'search' button and a list of gifs will be shown.
+                        To select a gif, click on one of the gifs shown below search bar. 
+
+                    </li>
+                    <li class="list-group-item">
+                        Step 3. Once you select a gif, complete the survey on the survey section 
+                        and click "confirm" to submit your choice and answers.
+                    </li>
+
+                </ul>
+            </div>
+            <div class="col-md-3"></div>
+
+        </div>
         <div class="row">
             <div class="col-md-4" style="padding: 0% 0% 0% 14%;">
                 <h1 class = "pb-4"> Sample {{sample_id}}</h1>
+                <div class="m-4">
+                    <div>
+                        Alex
+                    </div>
+                    <p>
+                        How did you physics go?
+                    </p>
+                    <p>
+                        Oh it went really well!
+                    </p>
+                </div>
                 <img src="{% static "img/screenshot.png"%} " alt="" class="img-fluid">
             </div>
             <div class="col-md-4" >
@@ -121,7 +158,7 @@
 
                 <div class="input-group mb-3">
                     <p class = "w-100">
-                        Have you used the selected gifs with the same character?
+                        Have you used any gifs with the same character in the selected gif?
                     </p>
                     <select class="custom-select" id="inputGroupSelect01">
                         <option selected>True or False</option>
@@ -134,7 +171,7 @@
 
                 <div class="input-group mb-3">
                     <p class = "w-100">
-                        Have you seen someone using the gifs that you selected?
+                        Have you seen someone using the gif that you selected?
 
                     </p>
                     <select class="custom-select" id="inputGroupSelect01">
@@ -144,18 +181,6 @@
                     </select>
                 </div>
 
-                <div class="input-group mb-3">
-                    <p class = "w-100">
-                        Do you know the source of the selected animated gif?
-
-
-                    </p>
-                    <select class="custom-select" id="inputGroupSelect01">
-                        <option selected>True or False</option>
-                        <option value="1">1 - Yes</option>
-                        <option value="2">2 - No</option>
-                    </select>
-                </div>
                 <form method='post' action="" >
                     {% csrf_token %}
                     <input type="submit" class="btn btn-primary btn-lg btn-block"
