--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -74,7 +74,7 @@
                         {% if msg.type == "left" %}
                             <div class = "d-flex justify-content-start mb-3">
                                 {% if msg.highlight %}
-                                <div class = "p-2 px-4" style = "background-color: #F6D06F; border-radius: 30px; ">
+                                <div class = "p-2 px-4" id = "hl-msg" style = "background-color: #F6D06F; border-radius: 30px; ">
                                     {{ msg.payload }}
                                 </div>
                                 {% else %}
@@ -88,7 +88,7 @@
                         {% elif msg.type == "right" %}
                             <div class = "d-flex justify-content-end mb-3">
                                 {% if msg.highlight %}
-                                <div class = "p-2 px-4" style = "background-color: #F6D06F; border-radius: 30px; ">
+                                <div class = "p-2 px-4" id = "hl-msg" style = "background-color: #F6D06F; border-radius: 30px; ">
                                     {{ msg.payload }}
                                 </div>
                                 {% else %}
