--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -39,22 +39,22 @@
             <div class="col-md-1"></div>
             <div class="col-md-3">
                 Step 1. Read over the conversation example in the Sample section.
-                You're tasked with selecting a gif to replace the highlighted message.
+                You're tasked with selecting a gif to replace the last message in the yellow text bubble.
             </div>
             <div class="col-md-4">
-                Step 2. Type in the keyword in the search bar to search a gif. 
+                Step 2. Type in keywords in the search bar to search a gif. 
                 Click 'search' button and a list of gifs will be shown.
                 To select a gif, click on one of the gifs shown below search bar. 
             </div>
             <div class="col-md-3">
                 Step 3. Once you select a gif, complete the survey on the survey section 
-                        and click "confirm" to submit your choice and answers.
+                        and click "submit" to submit your choice and answers.
             </div>
             <div class="col-md-1"></div>
         </div>
         <div class="row">
-            <div class="col-md-4" style="padding: 0% 2% 0% 5%;">
-                <h1 class = "pb-4"> Sample {{sample_id}}</h1>
+            <div class="col-md-3" style="padding: 0% 2% 0% 2%;">
+                <h1 class = "pb-4 text-center"> Sample</h1>
                 <div class="m-4">
                     <div class = "d-flex justify-content-center" >
                         <img src="{% static "img/avatar.png"%} " alt="" class="img-fluid w-25" id = "avatar" style = "border-radius: 30px;">
@@ -103,12 +103,12 @@
                    
                 </div>
             </div>
-            <div class="col-md-4" >
-                <h1 class = "pb-4">  Gif</h1>
+            <div class="col-md-5" >
+                <h1 class = "pb-4 text-center">  Gif</h1>
                 <!-- <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid main_img"> -->
-                <p class="lead">
+                <h3>
                     Search a Gif to replace the highlighted text
-                </p>
+                </h3>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
                         <button id = "searchbtn" class="btn btn-outline-secondary" type="button">Search</button>
@@ -117,22 +117,14 @@
                         aria-describedby="basic-addon1">
                 </div>
                 <div id="gifresults">
-
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
-                    <img src="{% static "img/sample.gif"%} " alt="" class="img-fluid w-25">
                 </div>
             </div>
-            <div class="col-md-4" style="padding: 0% 7% 0% 7%;">
-                <h1 class = "pb-4"> Survey</h1>
+            <div class="col-md-4" style="padding: 0% 5% 0% 5%;">
+                <h1 class = "pb-4 text-center"> Survey</h1>
                 <img src="sample.gif" alt="" class="img-fluid">
-               
+                    <h3>How much do you agree with the statement:</h3>
                     <div class="form-group mb-3">
                         <p>
-                            How much do you agree with the statement:
                             This gif closely represents or describes the emotion I want to express.
                         </p>
                         <div class="col-sm-10">
@@ -164,7 +156,6 @@
 
                 <div class="form-group mb-3">
                     <p>
-                        How much do you agree with the statement:
                         I would likely use the selected gif in my own conversation.
                     </p>
                     <div class="col-sm-10">
@@ -196,7 +187,6 @@
 
                 <div class="form-group mb-3">
                     <p>
-                        How much do you agree with the statement:
                         I’m familiar with the source of the selected animated gif.
                     </p>
                     <div class="col-sm-10">
@@ -225,6 +215,7 @@
                         </div>
                     </div>
                 </div>
+                <h3>True or False</h3>
 
                 <div class="form-group mb-3">
                     <p class = "w-100">
@@ -263,7 +254,7 @@
                 </div>
                 
                
-
+<!-- 
                 <div class="form-group mb-3">
                     <p class = "w-100">
                         Have you seen someone using the gif that you selected?
@@ -281,7 +272,7 @@
                             </label>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <form method='post' action="" >
                     {% csrf_token %}
