--- a/gif/study/templates/index.html
+++ b/gif/study/templates/index.html
@@ -23,7 +23,7 @@
     </script>
     <script src="{% static "js/main.js" %}"></script>   
 </script>
-    <title>Animated Gifs</title>
+    <title>Animated Gif </title>
 </head>
 
 <!-- footer -->
@@ -33,20 +33,21 @@
         </h1>
         <h2 class="display-5 pb-4" style="color: #4E4E4E; text-align: center; font-size: 20px;">Case {{request.session.step}}
         </h2>
-        <div class="text-center">Instruction</div>
+        <div class="text-center">Instruction </div>
 
         <div class="row pb-4 mb-4">
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-1"></div> -->
+            <div class="col-md-3 text-center">
                 Step 1. Read over the conversation example in the Sample section.
                 You're tasked with selecting a gif to replace the highlighted message.
             </div>
-            <div class="col-md-4">
+            
+            <div class="col-md-5 text-center">
                 Step 2. Type in the keyword in the search bar to search a gif. 
                 Click 'search' button and a list of gifs will be shown.
                 To select a gif, click on one of the gifs shown below search bar. 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 text-center">
                 Step 3. Once you select a gif, complete the survey on the survey section 
                         and click "confirm" to submit your choice and answers.
             </div>
